--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "heroku-postbuild": "node utils/seed.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.13"
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.7.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.20"
   }
 }
